[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/arcade_normal_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/ArcadeNormal-ZDZ.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PausePopupDialog.gd" type="Script" id=3]
[ext_resource path="res://sound/ButtonHover.tres" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 2 )

[node name="PausePopupDialog" type="PopupPanel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.0
margin_top = -66.0
margin_right = 249.0
margin_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
popup_exclusive = true
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -245.0
margin_top = -74.0
margin_right = 245.0
margin_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_right = 490.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Asteroids Game"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 143.0
margin_top = 47.0
margin_right = 347.0
margin_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0
alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 204.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 1 )
text = "Resume"

[node name="NewButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 204.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "New Game"

[node name="QuitButton" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 70.0
margin_right = 204.0
margin_bottom = 101.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
